# lona

./: .coveragerc  .gitattributes  .gitignore  .isort.cfg  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  README.rst  REQUIREMENTS.dev.txt  REQUIREMENTS.packaging.txt  docker-compose  docker-compose.yml  flake8.ini  mypy.ini  playwright.Dockerfile  pyproject.toml  pytest.ini  setup.cfg  setup.py  test.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
doc/: Makefile  REQUIREMENTS.txt  rollout_settings.py  settings.py
doc/content/: basic-concept.rst  changelog.rst  contributors.rst  faq.rst  getting-started.rst  how-to-contribute.rst  index.rst  license.rst  news-getting-help.rst  nodes.rst  protocol.rst  roadmap.rst  routing.rst  stickers.rst  views.rst
doc/content/api-reference/: buckets.rst  channels.rst  debugging.rst  deployment.rst  error-views.rst  frontends.rst  getting-started.rst  html.rst  lona-scripts.rst  lona-shell.rst  middlewares.rst  server.rst  sessions.rst  settings.rst  static-files.rst  testing.rst  views.rst
doc/content/contrib/: django-auth.rst
doc/content/cookbook/: adding-a-custom-command-to-lona-shell.rst  auto-reconnect.rst  integrating-a-frontend-library.rst  integrating-django.rst  limit-concurrent-views.rst  url-reverse-resolving.rst  using-server-state.rst  using-traditional-html.rst  writing-a-daemon-view.rst  writing-a-lona-form.rst  writing-a-multi-user-view.rst  writing-a-traditional-form.rst
doc/content/deployment/: Dockerfile  deploying-on-docker.rst  deploying-on-linux.rst  docker-compose.yml  hello-world.py  resource-management.rst
doc/content/end-user-documentation/: basic-concept.rst  changelog.rst  command-line.rst  contributors.rst  debugging.rst  deployment.rst  error-views.rst  frontends.rst  getting-started.rst  html.rst  lona-scripts.rst  lona-shell.rst  middlewares.rst  news-getting-help.rst  server.rst  sessions.rst  settings.rst  static-files.rst  testing.rst  views.rst  widget-api.rst
doc/plugins/: api_doc.py  changelog.py  fix_search.py  prefixes.py  pygments.py  rst_directives.py  rst_setting.py  toc_tree.py  version_prefix.py
doc/theme/static/: custom.css
doc/theme/templates/: footer.html  page.html
lona/: __init__.py  __main__.py  _json.py  _time.py  _types.py  app.py  buckets.py  channels.py  client_pre_compiler.py  compat.py  connection.py  context.py  decorators.py  default_routes.py  default_settings.py  default_views.py  errors.py  exceptions.py  hook_manager.py  imports.py  input_event.py  json.py  locking.py  logging.py  middleware_controller.py  middlewares.py  monitor.py  protocol.py  pytest.py  request.py  response_parser.py  responses.py  routing.py  run_server.py  scheduling.py  server.py  server_state.py  sessions.py  settings.py  state.py  (+15 more)
lona/client/: context.js  dom-renderer.js  dom-updater.js  input-events.js  job-queue.js  lona.js  widget-data-updater.js  window-shim.js  window.js
lona/client/_lona/: context.js  dom-renderer.js  dom-updater.js  input-events.js  lona.js  rendering-engine.js  widget-data-updater.js  window-shim.js  window.js
lona/client/lona/: window.js
lona/command_line/: collect_static.py  handle_command_line.py  run_server.py  terminal.py
lona/contrib/bootstrap3/: __init__.py  nodes.py
lona/contrib/chartjs/: __init__.py  widgets.py
lona/contrib/django/: auth.py  forms.py
lona/debugger/: routes.py  views.py
lona/events/: __init__.py  event_types.py  input_event.py  view_event.py
lona/html/: __init__.py  _nodes.py  abstract_node.py  attribute_dict.py  attribute_list.py  base.py  bootstrap3.py  document.py  forms.py  grid.py  mixins.py  node.py  node_event_list.py  node_events.py  node_list.py  nodes.py  parsing.py  patches.py  selector.py  text_node.py  widget.py  widget_data.py  widgets.py
lona/html/canvas/: canvas.js  canvas.py
lona/html/data_binding/: inputs.py  radio_buttons.py  select.py
lona/html/nodes/: content_sectioning.py  demarcating_edits.py  document_metadata.py  embedded_content.py  image_and_multimedia.py  inline_text_semantics.py  interactive_elements.py  raw_nodes.py  (+7 more)
lona/message_bus/: broker.py  client.py  protocol.py
lona/middlewares/: file_storage.py  lona_messages.py  request_middlewares.py  sessions.py  websocket_middlewares.py
lona/settings/: default_routes.py  default_settings.py  default_settings_post.py  default_settings_pre.py  settings.py
lona/shell/: shell.py
test_project/: .gitignore  Makefile  REQUIREMENTS.Django.txt  REQUIREMENTS.txt  debug_settings.py  hooks.py  middlewares.py  routes.py  settings.py  views.py
test_project/django-project/: django_settings.py  manage.py  setup.py
test_project/static/: style.css
test_project/templates/: home.html  template_response.html
test_project/views/: channels.py  error_404.py  error_500.py  handle_404.py  handle_500.py  home.py
test_script/: autocomplete_widget.js  test_script.py
test_script/static/: custom.css
test_script/templates/: custom.html
tests/: REQUIREMENTS.lint.txt  REQUIREMENTS.test.txt  conftest.py  test_0000_test_suite.py  test_0001_html.py  test_0100_components.py  test_0101_html_attribute_dict.py  test_0102_html_attribute_list.py  test_0103_html_sub_nodes.py  test_0104_html_parsing.py  test_0105_html_query_selectors.py  test_0106_html_state.py  test_0107_html_node_compare.py  test_0201_number_input.py  test_0202_html_select.py  test_0203_html_select2.py  test_0204_html_radio_buttons.py  test_0301_routing.py  test_0302_responses.py  test_0303_click_events.py  test_0304_rendering.py  test_0305_events.py  test_0305_requests.py  test_0306_requests.py  test_0307_history.py  test_403_forbidden_errors.py  test_404_not_found_errors.py  test_500_internal_errors.py  test_600_buckets.py  test_blur_events.py  test_channels.py  test_click_events.py  test_collect_static.py  test_components.py  test_daemon_views.py  test_focus_events.py  test_html_attribute_dict.py  test_html_attribute_list.py  test_html_form_post.py  test_html_select.py  (+23 more)
tests/docker/: docker-compose.yml  playwright.dockerfile
tests/static/: test-widget.js
(+218 files in other folders)
