[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
version = "1.16.1"
name = "lona"
description = "Write responsive web apps in full python"

authors = [
  { name="Florian Scherf", email="mail@florianscherf.de" },
]

license = { file="LICENSE.txt" }
readme = "README.rst"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Framework :: Django",
  "Framework :: Pytest",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

requires-python = ">=3.8"

dependencies = [
  'aiohttp>=3,<4',
  'watchfiles',
  'jinja2',
  'rlpython',
  'typing-extensions',
]


[project.optional-dependencies]
packaging = [
  "build",
  "twine",
]

dev = [
  "tox",
]

test = [
  "aiohttp>=3,<4",
  "jinja2",
  "rlpython",
  "typing-extensions",

  "coverage==7.3.2",
  "pytest==7.4.3",
  "pytest-aiohttp==1.0.5",
  "pytest-mock==3.12.0",
  "pytest-timeout==2.2.0",
  "playwright==1.38.0",
]

lint = [
  "aiohttp>=3,<4",
  "jinja2",
  "rlpython",
  "typing-extensions",

  "coverage",
  "flake8==6.1.0",
  "flake8-2020==1.8.1",
  "flake8-bugbear==23.9.16",
  "flake8-commas==2.1.0",
  "flake8-comprehensions==3.14.0",
  "flake8-length==0.3.1",
  "flake8-logging-format==0.9.0",
  "flake8-mutable==1.2.0",
  "flake8-noqa==1.3.2",
  "flake8-pytest-style==1.7.2",
  "flake8-quotes==3.3.2",
  "flake8-use-fstring==1.4",
  "mypy==1.7.1",
  "isort==5.12.0",
  "pytest==7.4.3",
]


[project.urls]
"Homepage" = "https://lona-web.org"
"Repository" = "https://github.com/lona-web-org/lona"
"Bug Tracker" = "https://github.com/lona-web-org/lona/issues"


[project.entry-points.pytest11]
lona = "lona.pytest"


[tool.setuptools]
include-package-data = true
script-files = [
  "bin/lona",
]

[tool.setuptools.packages.find]
include = ['lona*']

[tool.setuptools.package-data]
"lona.client" = ["**"]
"lona.client2" = ["**"]
"lona.static" = ["**"]
"lona.templates" = ["**"]
"lona.html.nodes" = ["**"]

[tool.setuptools.exclude-package-data]
"*" = [
  ".*",
  "~*",
  "*.swp",
  "*.pyc",
]
