[metadata]
description = Write responsive web apps in full python
long_description = file: README.rst
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: AsyncIO
    Framework :: Django
    Framework :: IPython
    Framework :: Pytest
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: JavaScript
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
